--- a/templates/admin.html
+++ b/templates/admin.html
@@ -152,6 +152,7 @@
     <div class="nav-buttons">
         <button onclick="window.location.href='/tarjetas_equipos'">Ver Tarjetas por Equipo</button>
         <button onclick="window.location.href='/admin/comprobantes'">Gestionar Comprobantes</button>
+        <button onclick="window.location.href='/admin/inscripciones'">Ver Inscripciones</button>
     </div>
 
     <!-- Success Message Container -->
