--- a/templates/tarjetas_equipos.html
+++ b/templates/tarjetas_equipos.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
         :root {
-            --primary-color: #ffd700;
+            --primary-color: #ffea00;
             --secondary-color: #000000;
             --accent-color: #ffd700;
             --text-light: #ffffff;
